[gd_scene load_steps=3 format=3 uid="uid://csy4tuyr3ewj7"]

[ext_resource type="Script" uid="uid://bx1uubma5sbay" path="res://scripts/upgrade_button.gd" id="1_vd32k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vd32k"]
bg_color = Color(0.154876, 0.154876, 0.154876, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.152941, 0.152941, 0.152941, 1)

[node name="UpgradeButton" type="Button"]
custom_minimum_size = Vector2(100, 40)
offset_right = 116.0
offset_bottom = 31.0
size_flags_horizontal = 3
alignment = 0
script = ExtResource("1_vd32k")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Name"

[node name="Cost" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "10"

[node name="HintTextLabel" type="Label" parent="."]
z_index = 10
layout_mode = 2
offset_top = 40.0
offset_right = 176.0
offset_bottom = 71.0
size_flags_vertical = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_vd32k")
text = "Wow some flavor text"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
